- ALL: allow, recognise and store empty multi-select fields on the config forms.
- ALL: notice Undefined index nature in completor.php on line 336.
- OC2/OC3: mail did not use the correct property names for the smtp settings.

Features:
- WC3: WC seems to return amounts with an increased precision (was: rounded to
  the cent. now: it seems not any longer rounded).

5.5.0 (2018-11-14)
------------------
Features:
- ALL: There are more products than the digital services that are subject to
  foreign vat for EU customers:
  - Rephrase everything that has to do with digital services (vat type 6).
  - Rename option digitalServices to foreignVat.
- ALL: better differentiate between invoice type 1 and 6 for countries having
  the same vat rate as NL:
  * Meta::VatRateLookupLabel is now also an array.
  * Add vat class information as metadata.
  * Add method ShopCapabilities::getVatClasses().
  * Add setting foreignVatClasses (default, UI on config form).
  * Use setting foreignVatClasses and vat class meta data to select between vat
    type 1 and 6.
- OC: Improved filling vat class/rate lookup meta data by matching zones of
  order address with geo zones of tax rates.
- ALL: Support for new roles and permissions to access the web server API.
- ALL: Added logging to execution stage of batch form.
- ALL: Make "property specification not found" a debug level message.
- JOO: Access rights revisited so that menu-items remain visible in the admin
  menu for people who only have access to the batch send form.
- WC: Now supports WC3.5 and WP5. Better update handling.
- WC2: show message that support for WC2 will end in a next version.
- Improved precision handling: getVatRangeTags() now adds the precision meta
  tags, removed from the shop specific Creator classes.
Bugs:
- ALL: Capitalise country adjectives (e.g. dutch -> Dutch) in code documentation
  and comments).
- MA: The size attribute on a multi select form element was not taken from our
  form settings.